--- a/src/components/PitchTemplateGenerator/PitchTemplateGenerator.style.scss
+++ b/src/components/PitchTemplateGenerator/PitchTemplateGenerator.style.scss
@@ -1,9 +1,136 @@
 @use '../../styles/card';
+@use '../../styles/palatte';
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 .template-container {
-    max-width: 720px;
+    font-family: "Rubik", sans-serif;
+    font-optical-sizing: auto;
+    max-width: 360px;
+    * {
+        box-sizing: border-box;
+    }
 }
 
 .template-card {
     @include card.card;
+    height: 560px;
+}
+
+.template-cover {
+    position: relative;
+    width: 100%;
+    height: 50%;
+    overflow: hidden;
+    & > img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.template-detail {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 50%;
+    width: 100%;
+    padding: 8px 16px;
+    background: linear-gradient(0deg, palatte.$brandPrimary 18.23%, rgba(0, 62, 120, 0.68) 68.23%, rgba(0, 62, 120, 0.00) 100%);
+    color: white;
+    .title {
+        font-size: 16px;
+    }
+}
+
+.template-content {
+    padding: 0 18px 18px;
+    font-size: 14px;
+}
+
+.template-category-list {
+    display: flex;
+    padding: 0 18px 18px;
+    font-size: 14px;
+    gap: 6px;
+    flex-wrap: wrap;
+}
+
+.template-category-item {
+    padding: 5px 16px;
+    line-height: 24px;
+    border: 1px solid palatte.$gray30;
+    border-radius: 18px;
+}
+
+.template-action {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translate(0, -50%);
+}
+
+.template-action-button {
+    padding: 0 24px;
+    height: 48px;
+    display: flex;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 24px;
+    font-size: 18px;
+    font-weight: 600;
+    background-color: white;
+    color: palatte.$brandSecondary70;
+    border: none;
+    box-shadow: 0 0 16px -2px rgba(0, 0, 0, 0.25);
+    &:hover {
+        cursor: pointer;
+    }
+    &:active {
+        background-color: palatte.$brandSecondary70;
+        color: white;
+        & > svg path {
+            fill: white;
+        }
+    }
+    & > svg {
+        width: 24px;
+        height: 24px;
+    }
+}
+
+.template-generate-button {
+    margin-top: 30px;
+    display: flex;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
+    background-color: palatte.$brandPrimary;
+    color: white;
+    padding: 10px 12px;
+    width: 100%;
+    line-height: 24px;
+    border-radius: 8px;
+    font-size: 18px;
+    font-weight: 600;
+    border: 1px solid palatte.$brandPrimary;
+    &:hover {
+        cursor: pointer;
+    }
+    &:active {
+        background-color: white;
+        color: palatte.$brandPrimary;
+        & > svg path {
+            fill: palatte.$brandPrimary;
+        }
+    }
+    & > svg {
+        width: 24px;
+        height: 24px;
+    }
 }
