feat: update template generator

--- a/src/components/PitchTemplateGenerator/PitchTemplateGenerator.style.scss
+++ b/src/components/PitchTemplateGenerator/PitchTemplateGenerator.style.scss
@@ -6,6 +6,7 @@
     font-family: "Rubik", sans-serif;
     font-optical-sizing: auto;
     max-width: 360px;
+    min-width: 320px;
     * {
         box-sizing: border-box;
     }
